--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://luminous-clafoutis-e0e42b.netlify.app/"
+baseURL: "https://privateconversations.online/"
 languageCode: en-us
 title: Private Conversations
 theme: PaperMod
